--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,24 @@ body,
   width: 100%;
   font-family: "Inter" sans-serif;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #7e7f9d;
+}
+
+/* Handle */
+
+::-webkit-scrollbar-thumb {
+  background: #21295c;
+}
+
+/* Handle on hover */
+
+::-webkit-scrollbar-track:hover {
+  background: #21295c;
+}
